deleted zettelManager class added newZettel() and insertZettel() added sql jdbc.jar

--- a/src/main/resources/com/example/zettelkastensb/hello-view.fxml
+++ b/src/main/resources/com/example/zettelkastensb/hello-view.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zettelkastensb.HelloController">
    <children>
       <SplitPane dividerPositions="0.2, 0.8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #E6EEFF;">
         <items>
@@ -34,7 +33,7 @@
                   </TextField>
                   <HBox layoutX="1.0" layoutY="774.0" prefHeight="24.0" prefWidth="256.0">
                      <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#insertZettel" prefWidth="128.0" text="New Zettel">
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#newZettel" prefWidth="128.0" text="New Zettel">
                            <font>
                               <Font size="10.0" />
                            </font>
@@ -50,12 +49,12 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TextField layoutY="-2.0" prefHeight="41.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" text="HEADER ZETTEL #1312">
+                  <TextField fx:id="headerZettel" layoutY="-2.0" prefHeight="41.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" text="HEADER ZETTEL #1312">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </TextField>
-                  <TextArea layoutY="39.0" prefHeight="762.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" wrapText="true" />
+                  <TextArea fx:id="textZettel" layoutY="39.0" prefHeight="762.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" wrapText="true" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="800.0" prefWidth="200.0" />
