--- a/src/main/resources/com/example/zettelkastensb/hello-view.fxml
+++ b/src/main/resources/com/example/zettelkastensb/hello-view.fxml
@@ -2,15 +2,19 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zettelkastensb.HelloController">
    <children>
@@ -49,15 +53,26 @@
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TextField fx:id="headerZettel" layoutY="-2.0" onKeyTyped="#saveOnChangeZettel" prefHeight="41.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" text="HEADER ZETTEL #1312">
+                  <TextField fx:id="headerZettel" layoutY="-2.0" onKeyTyped="#saveOnChangeZettel" prefHeight="41.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </TextField>
-                  <TextArea fx:id="textZettel" layoutY="39.0" onKeyTyped="#saveOnChangeZettel" prefHeight="762.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" wrapText="true" />
+                  <TextArea fx:id="textZettel" layoutY="39.0" onContextMenuRequested="#onContextMenuRequested" onKeyTyped="#saveOnChangeZettel" prefHeight="762.0" prefWidth="755.0" style="-fx-background-color: #E6EEFF;" wrapText="true" />
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="800.0" prefWidth="200.0" />
+            <AnchorPane prefHeight="800.0" prefWidth="200.0">
+               <children>
+                  <VBox layoutX="55.0" layoutY="133.0" prefHeight="798.0" prefWidth="248.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Separator prefWidth="200.0" />
+                        <Accordion />
+                        <Label prefHeight="24.0" prefWidth="253.0" text="Buzzwords" />
+                        <TextFlow prefHeight="24.0" prefWidth="248.0" />
+                        <Button mnemonicParsing="false" onAction="#newBuzzword" prefHeight="24.0" prefWidth="253.0" text="Create Buzzword" />
+                     </children>
+                  </VBox>
+               </children></AnchorPane>
          </items>
       </SplitPane>
    </children>
