--- a/src/main/resources/com/example/zettelkastensb/hello-view.fxml
+++ b/src/main/resources/com/example/zettelkastensb/hello-view.fxml
@@ -7,18 +7,19 @@
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zettelkastensb.HelloController">
    <children>
@@ -91,10 +92,20 @@
                <children>
                   <VBox layoutX="55.0" layoutY="133.0" prefHeight="798.0" prefWidth="248.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Separator prefWidth="200.0" />
-                        <Accordion />
                         <Label prefHeight="24.0" prefWidth="253.0" text="Buzzwords" />
-                        <TextFlow prefHeight="24.0" prefWidth="248.0" />
+                        <MenuButton fx:id="mbShowBw" mnemonicParsing="false" onAction="#initializeBuzzwordList" prefHeight="24.0" prefWidth="276.0" text="Show Buzzwords...">
+                          <items>
+                              <RadioMenuItem id="btnShowBwZettel" fx:id="btnShowZettelBw" mnemonicParsing="false" onAction="#initializeBuzzwordFromZettelList" selected="true" text="Show Buzzwords in Zettel">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="tgBw" />
+                                 </toggleGroup>
+                              </RadioMenuItem>
+                              <RadioMenuItem id="btnShowAllBw" fx:id="btnShowAllBw" mnemonicParsing="false" onAction="#initializeBuzzwordList" text="Show all Buzzwords" toggleGroup="$tgBw" />
+                          </items>
+                        </MenuButton>
+                        <ListView fx:id="buzzwordList" prefHeight="315.0" prefWidth="253.0" />
+                        <Label prefHeight="24.0" prefWidth="255.0" text="Zettel containing Buzzword:" />
+                        <ListView fx:id="zettelBuzzwordList" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </children></AnchorPane>
