--- a/src/main/resources/com/example/zettelkastensb/hello-view.fxml
+++ b/src/main/resources/com/example/zettelkastensb/hello-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
@@ -53,12 +54,12 @@
                         </Accordion>
                         <HBox prefHeight="24.0" prefWidth="256.0">
                            <children>
-                              <Button fx:id="btnNewCollection" alignment="CENTER" mnemonicParsing="false" onAction="#newZettel" prefWidth="128.0" text="New Collection">
+                              <Button fx:id="btnNewCollection" alignment="CENTER" mnemonicParsing="false" onAction="#newCollection" prefWidth="128.0" text="New Collection">
                                  <font>
                                     <Font size="10.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="btnDeleteCollection" alignment="CENTER" mnemonicParsing="false" prefWidth="128.0" text="Delete Collection">
+                              <Button fx:id="btnDeleteCollection" alignment="CENTER" mnemonicParsing="false" onAction="#deleteCollection" prefWidth="128.0" text="Delete Collection">
                                  <font>
                                     <Font size="10.0" />
                                  </font>
@@ -74,7 +75,7 @@
                                     <Font size="10.0" />
                                  </font>
                               </Button>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefWidth="128.0" text="Delete Zettel">
+                              <Button alignment="CENTER" mnemonicParsing="false" onAction="#deleteZettel" prefWidth="128.0" text="Delete Zettel">
                                  <font>
                                     <Font size="10.0" />
                                  </font>
@@ -107,6 +108,7 @@
                   <VBox layoutX="55.0" layoutY="133.0" prefHeight="798.0" prefWidth="248.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label prefHeight="24.0" prefWidth="253.0" text="Buzzwords" />
+                        <DatePicker />
                         <MenuButton fx:id="mbShowBw" mnemonicParsing="false" onAction="#initializeBuzzwordList" prefHeight="24.0" prefWidth="276.0" text="Show Buzzwords...">
                           <items>
                               <RadioMenuItem id="btnShowBwZettel" fx:id="btnShowZettelBw" mnemonicParsing="false" onAction="#initializeBuzzwordFromZettelList" selected="true" text="Show Buzzwords in Zettel">
